fix profile scrollbar

--- a/frontend/src/components/Profile/Profile.module.scss
+++ b/frontend/src/components/Profile/Profile.module.scss
@@ -15,8 +15,12 @@
   margin: 0;
   padding: 10px;
   max-height: 75vh;
-  overflow: scroll;
+  overflow-y: scroll;
   box-sizing: border-box;
+}
+
+.forms::-webkit-scrollbar-thumb {
+  background-color: var(--inverted-bg-color)
 }
 
 .footer {
